<resources>
    <string name="app_name">Geo Stick</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">LOGIN</string>
    <string name="action_sign_up_short">REGISTER</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="Forget_password">Forget Password?</string>
    <string name="SignUp">New here? Sign Up</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="Logo">Application Logo</string>
    <string name="username">Username</string>
    <string name="title_activity_homescreen">homescreen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_add_message">New Geo Stick</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_view_message">Messages</string>


    <string name="New_GeoStick_title">Title</string>
    <string name="New_GeoStick_Message">Message Discription</string>
    <string name="New_GeoStick_Address">Address</string>
    <string name="New_GeoStick_startdate">Start Date</string>
    <string name="New_GeoStick_starttime">Start Time</string>
    <string name="New_GeoStick_enddate">End Date</string>
    <string name="New_GeoStick_endtime">End Time</string>
    <string name="New_GeoStick_Radio1">Shared</string>
    <string name="New_GeoStick_Radio2">Public</string>

    <string name="tabReminder">REMINDERS</string>
    <string name="tabShared">SHARED</string>
    <string name="tabPublic">PUBLIC</string>

    <string name="submit_text">SAVE</string>
    <string name="sharedmode">Mode:Public</string>


</resources>
