<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context="com.androidprojects.vinaydatta.geostick.MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/Logo"
        android:id="@+id/imageView"
        android:layout_marginTop="30dp"
        android:layout_above="@+id/apptitle"
        android:layout_centerHorizontal="true"
        android:src="@drawable/worldmap" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/logomargin"
        android:text="@string/app_name"
        android:id="@+id/apptitle"
        android:layout_centerInParent="true"
        android:textColor="@color/textColorGray"
        android:textSize="40sp" />
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/largepadding"
        android:layout_above="@+id/buttonRegister"
        android:textStyle="bold"
        android:background="@color/colorAccentdark"
        android:textColor="@color/textColor"
        android:textSize="@dimen/mediumfont"
        android:onClick="loginScreen"
        android:text="@string/action_sign_in_short"/>
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/largepadding"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="@dimen/mediumfont"
        android:textColor="@color/textColor"
        android:onClick="registerScreen"
        android:text="@string/action_sign_up_short"/>
</RelativeLayout>
