<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.androidprojects.vinaydatta.geostick.add_message"
    tools:showIn="@layout/activity_add_message">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/messagetitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textSize="@dimen/newGeostickTitle"
            android:hint="@string/New_GeoStick_title" />

    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/discription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="@dimen/newGeostickSmallMargin">

        <EditText
            android:id="@+id/messageDiscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/newGeostickMessage"
            android:singleLine="true"
            android:hint="@string/New_GeoStick_Message" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/discription"
        android:layout_marginTop="@dimen/newGeostickSmallMargin">

    <EditText
        android:id="@+id/locationaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/newGeostickMessage"
        android:singleLine="true"
        android:layout_marginTop="@dimen/newGeostickSmallMargin"
        android:layout_below="@+id/discription"
        android:hint="@string/New_GeoStick_Address" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:id="@+id/checkdatetime"
        android:text="Add Date and Time?"
        android:textSize="@dimen/newGeostickMessage"
        android:layout_marginTop="@dimen/newGeostickSmallMargin"/>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:id="@+id/datetimeswitch"
        android:layout_alignBaseline="@+id/checkdatetime"
        android:layout_alignParentRight="true"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/date1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkdatetime"
        android:paddingLeft="@dimen/newGeostickLargeMargin"
        android:layout_marginTop="@dimen/newGeostickSmallMargin">

        <EditText
            android:id="@+id/startdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:textSize="@dimen/newGeostickMessage"
            android:inputType="date"
            android:textAlignment="center"
            android:singleLine="true"
            android:layout_marginTop="@dimen/newGeostickSmallMargin"
            android:layout_below="@+id/discription"
            android:hint="@string/New_GeoStick_startdate" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/date2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkdatetime"
        android:paddingRight="@dimen/newGeostickLargeMargin"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/newGeostickSmallMargin">

        <EditText
            android:id="@+id/enddate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:textSize="@dimen/newGeostickMessage"
            android:inputType="date"
            android:textAlignment="center"
            android:singleLine="true"
            android:layout_marginTop="@dimen/newGeostickSmallMargin"
            android:layout_below="@+id/discription"
            android:hint="@string/New_GeoStick_enddate" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/time1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date1"
        android:paddingLeft="@dimen/newGeostickLargeMargin"
        android:layout_marginTop="@dimen/newGeostickSmallMargin">

        <EditText
            android:id="@+id/starttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:textSize="@dimen/newGeostickMessage"
            android:inputType="time"
            android:textAlignment="center"
            android:singleLine="true"
            android:layout_marginTop="@dimen/newGeostickSmallMargin"
            android:hint="@string/New_GeoStick_starttime" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date1"
        android:layout_alignParentRight="true"
        android:paddingRight="@dimen/newGeostickLargeMargin"
        android:layout_marginTop="@dimen/newGeostickSmallMargin">

        <EditText
            android:id="@+id/endtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:textSize="@dimen/newGeostickMessage"
            android:inputType="time"
            android:textAlignment="center"
            android:singleLine="true"
            android:layout_marginTop="@dimen/newGeostickSmallMargin"
            android:hint="@string/New_GeoStick_endtime" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time1"
        android:id="@+id/repeatreminder"
        android:text="Repeat reminder everyday?"
        android:textSize="@dimen/newGeostickMessage"
        android:layout_marginTop="@dimen/newGeostickSmallMargin"/>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time1"
        android:id="@+id/repeat"
        android:layout_alignBaseline="@+id/repeatreminder"
        android:layout_alignParentRight="true"/>


    <Button
        android:id="@+id/savelocationdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/submit_text"
        android:textStyle="bold"
        android:background="@color/colorAccent"
        android:shadowRadius="5"
        android:textColor="@color/textColor"
        android:textSize="@dimen/newGeostickMessage"/>



</RelativeLayout>
