<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.androidprojects.vinaydatta.geostick.signup"
    style="@style/Theme.AppCompat.Light.NoActionBar"
    android:background="@color/Background">









       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"

           android:layout_margin="@dimen/smallmargin">



                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/smallmargin"
                    android:layout_marginTop="@dimen/smallmargin"
                    android:textStyle="italic"
                    android:padding="@dimen/mediumpadding"
                    android:hint="@string/prompt_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:allowUndo="true"
                    android:textColor="#000000"
                    style="@style/AppTheme"
                    android:background="#ffffff"
                    android:textSize="@dimen/mediumfont"/>





                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/smallmargin"
                    android:layout_marginTop="@dimen/smallmargin"
                    android:padding="@dimen/mediumpadding"
                    android:layout_below="@+id/email"
                    android:textStyle="italic"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="#000000"
                    style="@style/AppTheme"
                    android:background="#ffffff"
                    android:textSize="@dimen/mediumfont"/>



            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/smallmargin"
                    android:layout_marginTop="@dimen/smallmargin"
                    android:padding="@dimen/mediumpadding"
                    android:hint="@string/prompt_password"
                    android:textStyle="italic"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:layout_below="@+id/username"
                    android:singleLine="true"
                    android:textColor="#000000"
                    style="@style/AppTheme"
                    android:background="#ffffff"
                    android:textSize="@dimen/mediumfont"/>



            <Button
                android:id="@+id/sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/smallmargin"
                android:layout_marginTop="@dimen/smallmargin"
                android:padding="@dimen/mediumpadding"
                android:layout_below="@+id/password"

                android:text="@string/action_sign_up_short"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:textColor="@color/textColor"

                android:textSize="@dimen/mediumfont"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_above="@+id/login"
               android:layout_centerHorizontal="true"
               android:text="Already have an account?"
               android:textStyle="italic|bold"/>

            <Button
                android:id="@+id/login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/smallmargin"
                android:layout_marginTop="@dimen/smallmargin"
                android:padding="@dimen/mediumpadding"
                android:onClick="loginScreen"
                android:layout_alignParentBottom="true"
                android:text="@string/action_sign_in_short"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff"
                android:textSize="@dimen/mediumfont"/>




       </RelativeLayout>



</RelativeLayout>
